--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -96,9 +96,8 @@
         
           .container {
             border: 1px solid white;
-            border-radius: 10px;
-            width: 65%;
-            height: 80%;
+            width: 100vw;
+            height: 100vh;
             display: flex;
             overflow: hidden;
             @include tablet {
